--- a/main.css
+++ b/main.css
@@ -40,6 +40,12 @@ header input{
     transition: 0.2s;
 }
 
+@media only screen and (max-width: 768px) {
+    header input{
+         width: 100%;
+    }
+  }
+
 header input:focus {
     transition: 0.2s;
     outline: none;
@@ -161,59 +167,6 @@ main{
     display: inline-block;
     width: 60px;
     height: 34px;
-  }
-  
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: #ffffff;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #38feb8;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #38feb8;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-    background-color: rgb(34, 25, 25);
-  }
-  
-  .slider.round {
-    border-radius: 100px;
-  }
-  
-  .slider.round:before {
-    border-radius: 100%;
   }
 
   .subsol{
