--- a/main.css
+++ b/main.css
@@ -44,9 +44,9 @@ header input{
     header input{
          width: 100%;
     }
-    #search{
+    #search i{
         position: relative;
-        margin-left: -100px;
+        margin-left: -10px;
     } 
   }
 
